feat(index_final): section 6 - diapo 9

--- a/index_final.html
+++ b/index_final.html
@@ -638,63 +638,41 @@
 		</div>
 
 
-	</section>
+		<div class="diapo diapo_9 step step_orderToAnimate-14 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-	<!-- SECCION 18 -->
-	<section class="section eighteen fondo5">
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<div>
+									<h1 class="text-center pt40 pb10">Emissió preolímpica #8</h1>
+									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>.(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
+								</div>
+							</div>
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div>
-						<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
-						<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+							<div>
+								<img class="previs-top-right max-img imgmw320 sello1 step step_orderToAnimate-13 no-animated" src="img/cinco/8/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+							<div>
+								<img class="absolute-center-bottom1 max-img imgmw320 sello2" src="img/cinco/8/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="absolute-center-left2 max-img imgmw320 sello3" src="img/cinco/8/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="previs-top4 max-img imgmw320" src="img/cinco/7/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right4 max-img imgmw320" src="img/cinco/7/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-right3 max-img imgmw320" src="img/cinco/7/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
+
 	</section>
 
-	<!-- SECCION 19 -->
-	<section class="section nineteen fondo5">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div>
-						<h1 class="text-center pt40 pb10">Emissió preolímpica #8</h1>
-						<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>.(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
-					</div>
-				</div>
-
-				<div>
-					<img class="previs-top-right max-img imgmw320" src="img/cinco/8/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-				<div>
-					<img class="absolute-center-bottom1 max-img imgmw320" src="img/cinco/8/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="absolute-center-left2 max-img imgmw320" src="img/cinco/8/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-			</div>
-	</section>
 
 	<!-- SECCION 20 -->
 	<section id="eolimpiques" class="section twenty fondo6">
