feat(index_final): section 7 - diapo 1

--- a/index_final.html
+++ b/index_final.html
@@ -675,27 +675,35 @@
 
 
 	<!-- SECCION 20 -->
-	<section id="eolimpiques" class="section twenty fondo6">
+	<section id="eolimpiques" class="section seven fondo6">
 
-		<!-- Contenido -->
-		<div class="container flex-parent">
-			<div class="row">
-				<div class="col-sm-12 flex-child">
-					<div class="titulodesc">
-						<h1 class="text-center">Les emissions filatèliques olímpiques</h1>
-						<p class="text-center">L'embranzida de les emissions preolímpiques culminà amb la <strong>presentació de les sèries olímpiques</strong>, durant el juliol de 1992.</p>
+		<div class="diapo diapo_1">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container flex-parent">
+						<div class="row">
+							<div class="col-sm-12 flex-child">
+								<div class="titulodesc">
+									<h1 class="text-center element1 step step_orderToAnimate-1 no-animated">Les emissions filatèliques olímpiques</h1>
+									<p class="text-center element2 no-animated">L'embranzida de les emissions preolímpiques culminà amb la <strong>presentació de les sèries olímpiques</strong>, durant el juliol de 1992.</p>
+								</div>
+							</div>
+
+							<div class="col-sm-12 flex-child">
+								<div class="contenido pt20">
+									<img class="img-responsive element3 no-animated" src="img/seis/1/sello1.png" alt="Olymphilex Stamp">
+								</div>
+							</div>
+						</div>
+
+						<div>
+							<img class="absolute-center-right5 max-img imgmw320 element4 no-animated" src="img/seis/1/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+						</div>
 					</div>
-				</div>
 
-				<div class="col-sm-12 flex-child">
-					<div class="contenido pt20">
-						<img class="img-responsive" src="img/seis/1/sello1.png" alt="Olymphilex Stamp">
-					</div>
 				</div>
-			</div>
-
-			<div>
-				<img class="absolute-center-right5 max-img imgmw320" src="img/seis/1/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 			</div>
 		</div>
 	</section>
