feat(index_final): section 7 - diapo 2

--- a/index_final.html
+++ b/index_final.html
@@ -706,36 +706,41 @@
 				</div>
 			</div>
 		</div>
-	</section>
+
+		<div class="diapo diapo_2 step step_orderToAnimate-2 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-8 col-sm-offset-2">
+								<div>
+									<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
+									<p class="text-center pt20">El disseny dels tres primers segells identificà els tres <strong>elements clau dels Jocs: Cobi</strong> -disseny de Xavier Mariscal-, <strong>la torxa olímpica</strong> -disseny  d'Agustí Puig- i <strong>"Victòria"</strong> -disseny de Norberto Thomas-.</p>
+								</div>
+							</div>
+
+							<div>
+								<img class="absolute-center-left3 max-img imgmw320 sello1 step step_orderToAnimate-3 no-animated" src="img/seis/2/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-center max-img imgmw320 sello2" src="img/seis/2/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="absolute-center-right4 max-img imgmw320 sello3" src="img/seis/2/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
 
 
-	<!-- SECCION 21 -->
-	<section class="section tewntyone fondo6">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
-					<div>
-						<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
-						<p class="text-center pt20">El disseny dels tres primers segells identificà els tres <strong>elements clau dels Jocs: Cobi</strong> -disseny de Xavier Mariscal-, <strong>la torxa olímpica</strong> -disseny  d'Agustí Puig- i <strong>"Victòria"</strong> -disseny de Norberto Thomas-.</p>
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="absolute-center-left3 max-img imgmw320" src="img/seis/2/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-center max-img imgmw320" src="img/seis/2/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right4 max-img imgmw320" src="img/seis/2/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
 	</section>
 
 
