feat(index_final): section 7 - diapo 3

--- a/index_final.html
+++ b/index_final.html
@@ -741,36 +741,40 @@
 			</div>
 		</div>
 
-	</section>
+		<div class="diapo diapo_3 step step_orderToAnimate-4 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-8 col-sm-offset-2">
+								<div>
+									<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
+									<p class="text-center pt20">Dissenyadors: <strong>Pilar Villuendas, Josep R. Gómez</strong>. Espais representats: Estadi Olímpic, Palau Sant Jordi i INEFC.</p>
+								</div>
+							</div>
+
+							<div>
+								<img class="previs-top-left1 max-img imgmw320 sello1 step step_orderToAnimate-5 no-animated"" src="img/seis/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+							<div>
+								<img class="absolute-center-up max-img imgmw320 sello2" src="img/seis/3/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="previs-top-right2 max-img imgmw320 sello3" src="img/seis/3/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
 
 
-	<!-- SECCION 22 -->
-	<section class="section tewntytwo fondo6">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
-					<div>
-						<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
-						<p class="text-center pt20">Dissenyadors: <strong>Pilar Villuendas, Josep R. Gómez</strong>. Espais representats: Estadi Olímpic, Palau Sant Jordi i INEFC.</p>
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="previs-top-left1 max-img imgmw320" src="img/seis/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="absolute-center-up max-img imgmw320" src="img/seis/3/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-top-right2 max-img imgmw320" src="img/seis/3/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
 	</section>
 
 
