feat(index_final): section 8 - diapo 1

--- a/index_final.html
+++ b/index_final.html
@@ -779,40 +779,50 @@
 
 
 	<!-- SECCION 23 -->
-	<section id="arreudelmon" class="section tewntythree fondo7">
+	<section id="arreudelmon" class="section eight fondo7">
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
-					<div>
-						<h1 class="text-center pt40 pb10">Barcelona ’92 arreu del món</h1>
-						<p class="text-center pt20">Molts països del món <strong>van posar en circulació els seus segells</strong> olímpics...</p>
+		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-8 col-sm-offset-2">
+								<div>
+									<h1 class="text-center pt40 pb10">Barcelona ’92 arreu del món</h1>
+									<p class="text-center pt20">Molts països del món <strong>van posar en circulació els seus segells</strong> olímpics...</p>
+								</div>
+							</div>
+
+							<div>
+								<img class="absolute-center-up2 max-img imgmw320 rota25 element1 step step_orderToAnimate-2 no-animated" src="img/siete/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="previs-top-left2 max-img rota3 element2" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+							<div>
+								<img class="previs-top-right4 max-img rota3 element3" src="img/siete/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-left2 max-img imgmw-media rota3 element4" src="img/siete/sello4.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-right4 max-img imgmw-media element5" src="img/siete/sello5.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="absolute-center-up2 max-img imgmw320 rota25" src="img/siete/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-top-left2 max-img rota3" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="previs-top-right4 max-img rota3" src="img/siete/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-left2 max-img imgmw-media rota3" src="img/siete/sello4.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-right4 max-img imgmw-media" src="img/siete/sello5.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
 	</section>
 
 	<!-- SECCION 23 -->
