--- a/index_final.html
+++ b/index_final.html
@@ -756,7 +756,7 @@
 							</div>
 
 							<div>
-								<img class="previs-top-left1 max-img imgmw320 sello1 step step_orderToAnimate-5 no-animated"" src="img/seis/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+								<img class="previs-top-left1 max-img imgmw320 sello1 step step_orderToAnimate-5 no-animated" src="img/seis/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							</div>
 
 							<div>
@@ -779,9 +779,9 @@
 
 
 	<!-- SECCION 23 -->
-	<section id="arreudelmon" class="section eight fondo7">
+	<section id="arreudelmon" class="section eight fondo7 ">
 
-		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
+		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
 
@@ -826,32 +826,40 @@
 	</section>
 
 	<!-- SECCION 23 -->
-	<section id="emprempta" class="section tewntythree fondo8">
+	<section id="emprempta" class="section nine fondo8">
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
-					<div>
-						<h1 class="text-center pb10">L’emprempta</h1>
-						<p class="text-center pt20">Els segells emesos durant els Jocs Olímpics de Barcelona <strong>van posar  el seu gra de sorra en la projecció mundial d'una ciutat moderna i actual.</strong>  La majoria de les il·lustracions,en bona part encarregades a artistes  i dissenyadors gràfics catalans, aposten per <strong>dissenys frescos i innovadors,  un fet poc habitual en la filatèlia del moment.</strong> </p>
+		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-8 col-sm-offset-2 title">
+								<div>
+									<h1 class="text-center pb10">L’emprempta</h1>
+									<p class="text-center pt20">Els segells emesos durant els Jocs Olímpics de Barcelona <strong>van posar  el seu gra de sorra en la projecció mundial d'una ciutat moderna i actual.</strong>  La majoria de les il·lustracions,en bona part encarregades a artistes  i dissenyadors gràfics catalans, aposten per <strong>dissenys frescos i innovadors,  un fet poc habitual en la filatèlia del moment.</strong> </p>
+								</div>
+							</div>
+
+							<div>
+								<img class="previs-top-left3 max-img imgmw320 sello1 step step_orderToAnimate-2 no-animated" src="img/ocho/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-center max-img imgmw320 sello2" src="img/seis/2/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="absolute-center-right4 max-img imgmw320 sello3" src="img/seis/2/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="previs-top-left3 max-img imgmw320" src="img/ocho/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-center max-img imgmw320" src="img/seis/2/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right4 max-img imgmw320" src="img/seis/2/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
 	</section>
 
 
