--- a/index_final.html
+++ b/index_final.html
@@ -865,6 +865,10 @@
 
 </div>
 
+<div class="scrollNavigation">
+	<ul></ul>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/query.scrollsteps-full-min.js"></script>
