fix(manual-update): daniel changes via file update

--- a/index_final.html
+++ b/index_final.html
@@ -211,13 +211,13 @@
 						<div class="img-esquina-r-t no-animated">
 							<img src="img/dos/plaza-catalunya1.png" alt="">
 							<div class="minidesc no-animated">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sollicitudin dolor at </p>
+								<p>Vista aèria de les obres de reconstrucció  de l’Estadi Olímpic de Montjuïc.</p>
 							</div>
 						</div>
 						<div class="img-esquina-l-b no-animated">
 							<img src="img/dos/estadio-olimpico1.png" alt="">
 							<div class="minidesc no-animated">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur</p>
+								<p>Escena d’eufòria col·lectiva durant el nombrament de Barcelona  com la seu organitzadora dels Jocs Olímpics de 1992.</p>
 							</div>
 						</div>
 					</div>
