--- a/index_final.html
+++ b/index_final.html
@@ -114,7 +114,7 @@
 <div id="fullpage">
 
 	<!-- SECCION 1 -->
-	<section id="firstsection" data-menuanchor="firstsection" class="section first fondo1">
+	<section id="firstsection" data-menuanchor="firstsection" class="anchorOnVerticalNavigation section first fondo1">
 
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
@@ -191,7 +191,7 @@
 
 	<!-- SECCION 2-->
 
-	<section id="presentacio" class="section second fondo2">
+	<section id="presentacio" class="anchorOnVerticalNavigation section second fondo2">
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -381,7 +381,7 @@
 	</section>
 
 	<!-- SECCION 6 -->
-	<section id="epreolimpiques" class="section six fondo5">
+	<section id="epreolimpiques" class="anchorOnVerticalNavigation section six fondo5">
 
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
@@ -675,7 +675,7 @@
 
 
 	<!-- SECCION 20 -->
-	<section id="eolimpiques" class="section seven fondo6">
+	<section id="eolimpiques" class="anchorOnVerticalNavigation section seven fondo6">
 
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
@@ -779,7 +779,7 @@
 
 
 	<!-- SECCION 23 -->
-	<section id="arreudelmon" class="section eight fondo7 ">
+	<section id="arreudelmon" class="anchorOnVerticalNavigation section eight fondo7 ">
 
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
@@ -826,7 +826,7 @@
 	</section>
 
 	<!-- SECCION 23 -->
-	<section id="emprempta" class="section nine fondo8">
+	<section id="emprempta" class="anchorOnVerticalNavigation section nine fondo8">
 
 		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
 			<div class="diapo_container">
