--- a/index_final.html
+++ b/index_final.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" media="all">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/style_final.css">
+	<link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
@@ -163,18 +164,18 @@
 								<div class="contenido">
 									<div class="titulodesc">
 										<h1 class="text-center">Barcelona, doble capitalitat olímpica</h1>
-										<p class="text-center">L'esdeveniment esportiu  l'organitzava el COOP (Comitè Organitzador de l'Olimpíada Popular) amb el suport del govern de la II República. La competició havia d'aplegar més de 6.000 esportistes nacionals i internacionals de diferents categories. Es tractava d'una alternativa als Jocs Olímpics de Berlín, celebrats aquell mateix any. Malauradament l'esdeveniment va quedar suspès per l'inici de la Guerra Civil.</p>
+										<p class="text-center">L'esdeveniment esportiu  l'organitzava el COOP (Comitè Organitzador de l'Olimpíada Popular) amb el suport del govern de la II República. La competició havia d'aplegar més de 6.000 esportistes nacionals i internacionals de diferents categories. Es tractava d'una alternativa als Jocs Olímpics de Berlín, celebrats aquell mateix any. <strong>Malauradament l'esdeveniment va quedar suspès per l'inici de la Guerra Civil.</strong></p>
 									</div>
 
 									<div class="row">
 										<div class="col-sm-12">
-											<div class="col-sm-6 p60 text-right text no-animated step step_orderToAnimate-4">
-												<p>Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
-												<span class="minidesc claim no-animated step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
+											<div class="col-sm-6 p60 pr0 text-right text no-animated step step_orderToAnimate-4">
+												<p>Molt abans del 1992, <strong>Barcelona va ser nomenada seu de l'Olimpíada Popular</strong>, concretament entre el 19  i el <br>26 de juliol del 1936.</p>
+												<span class="minidesc claim no-animated step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners<br> per a la celebració de l'Olimpíada Popular, 1936. </span>
 											</div>
 											<div class="col-sm-6 p60 image no-animated step step_orderToAnimate-5">
 												<img class="rota5 imgmw320" src="img/uno/olimpiada_popular.png" alt="Olimpiada Popular">
-												<span class="zoom"><img src="img/ampliar.png" alt=""></span>
+												<!-- <span class="zoom"><img src="img/ampliar.png" alt=""></span>-->
 											</div>
 										</div>
 									</div>
@@ -246,7 +247,7 @@
 									<img class="sobre" src="img/dos/sobre.png" alt="">
 
 									<div class="col-sm-4">
-										<p class="pt80">També per a l'ocasió, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comité organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
+										<p class="pt160">També per a l'ocasió, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comité organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
 									</div>
 								</div>
 							</div>
@@ -270,7 +271,7 @@
 							<div class="col-sm-12">
 								<div class="titulodesc">
 									<h1 class="text-center">La mascota olímpica</h1>
-									<p class="text-center">El projecte olímpic de Barcelona '92 tingué com a protagonista a Cobi, un gos d'atura català passat pel sedàs del dissenyador Xavier Mariscal. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, inclosa la filatèlia.</p>
+									<p class="text-center">El projecte olímpic de Barcelona '92 <strong>tingué com a protagonista a Cobi</strong>, un gos d'atura català passat pel sedàs del dissenyador <strong>Xavier Mariscal</strong>. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, <strong>inclosa la filatèlia.</strong></p>
 								</div>
 							</div>
 
@@ -308,12 +309,12 @@
 							</div>
 
 							<div class="col-xs-12 col-sm-8 col-sm-offset-2 part1 step step_orderToAnimate-1 no-animated">
-								<div class="col-sm-6">
+								<div class="col-sm-5">
 									<img class="rota4mov" src="img/tres/olimpiadacultural.png" alt="Cobi Presentación">
-									<span class="zoom2"><img src="img/ampliar.png" alt=""></span>
+									<!--<span class="zoom2"><img src="img/ampliar.png" alt=""></span>-->
 								</div>
 
-								<div class="col-xs-12 col-sm-6">
+								<div class="col-xs-12 col-sm-7">
 									<p class="text-left pt80">La candidatura olímpica contemplà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures. A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
 								</div>
 							</div>
@@ -406,13 +407,13 @@
 						<div class="contenido">
 							<div class="col-sm-1">&nbsp;</div>
 
-							<div class="col-sm-3">
+							<div class="col-sm-5">
 								<img class="max-img sello" src="img/cinco/sello.png" alt="Sello Pre Olímpico Barcelona 92'">
 							</div>
 
-							<div class="col-sm-7">
-								<p class="text-left">L'emblema va ser dissenyat per Josep M. Trias, i representa una figura saltant sobre els arcs olímpics.</p>
-								<p class="text-left pt80">El disseny sintetitza la figura humana sense concretar el gènere, transmetent el sentit humà dels Jocs. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
+							<div class="col-sm-5">
+								<p class="text-left"><strong>L'emblema va ser dissenyat per Josep M. Trias</strong>, i representa una figura saltant sobre els arcs olímpics.</p>
+								<p class="text-left pt20">El disseny sintetitza la figura humana sense concretar el gènere, <strong>transmetent el sentit humà dels Jocs</strong>. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
 							</div>
 							<div class="col-sm-1">&nbsp;</div>
 						</div>
@@ -433,7 +434,7 @@
 							<div class="col-xs-12 col-sm-12 col-md-12 flex-child">
 								<div class="col-xs-12 col-sm-6">
 									<h1 class="pb10">Emissió preolímpica #1</h1>
-									<p class="text-left pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+									<p class="text-left pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
 								</div>
 
 								<div class="col-xs-12 col-sm-6">
@@ -467,7 +468,7 @@
 								</div>
 
 								<h1 class="pb10">Emissió preolímpica #2</h1>
-								<p class="text-center pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+								<p class="text-center pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
 								<div>
 									<img class="visible-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
 									<img class="visible-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
@@ -493,7 +494,7 @@
 							<div class="col-sm-12">
 								<div>
 									<h1 class="text-right pt40 pb10">Emissió preolímpica #3</h1>
-									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>.(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
+									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
 								</div>
 							</div>
 
@@ -518,7 +519,7 @@
 							<div class="col-sm-12">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #4</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
 								</div>
 							</div>
 
@@ -544,7 +545,7 @@
 							<div class="col-sm-12 flex-child">
 								<div>
 									<h1 class="text-center pb10">Emissió preolímpica #5</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
 								</div>
 							</div>
 
@@ -613,7 +614,7 @@
 							<div class="col-sm-12">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
 								</div>
 							</div>
 
@@ -648,7 +649,7 @@
 							<div class="col-sm-12">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #8</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>.(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
 								</div>
 							</div>
 
@@ -687,7 +688,7 @@
 							<div class="col-sm-12 flex-child">
 								<div class="titulodesc">
 									<h1 class="text-center element1 step step_orderToAnimate-1 no-animated">Les emissions filatèliques olímpiques</h1>
-									<p class="text-center element2 no-animated">L'embranzida de les emissions preolímpiques culminà amb la <strong>presentació de les sèries olímpiques</strong>, durant el juliol de 1992.</p>
+									<p class="text-center element2 no-animated">L'embranzida de les emissions preolímpiques culminà amb la <br><strong>presentació de les sèries olímpiques</strong>, durant el juliol de 1992.</p>
 								</div>
 							</div>
 
@@ -800,10 +801,6 @@
 							</div>
 
 							<div>
-								<img class="previs-top-left2 max-img rota3 element2" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-							</div>
-
-							<div>
 								<img class="previs-top-right4 max-img rota3 element3" src="img/siete/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
@@ -813,6 +810,10 @@
 
 							<div>
 								<img class="previs-bottom-right4 max-img imgmw-media element5" src="img/siete/sello5.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+							<div>
+								<img class="previs-top-left2 max-img rota3 element2" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							</div>
 
 
