--- a/portada.html
+++ b/portada.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -24,57 +20,25 @@
 </head>
 
 </head>
-<body id="portada">
-<div class="main">
+<body id="portada" style="height: 100%;">
+  <div class="visible-xs sello_mobile position-relative">
+    <a href="index.html">
+        <img src="img/portada/sobre_mobile.png">
+    </a>
+  </div>
+  <div class="hidden-xs main">
     <div class="sello-contenedor">
-        <div class="sello">
-            <!--<img src="img/portada/segell-portada.png" alt="Postal Barcelona 92'">-->
-            <a href="index.html" class="button">Entrar</a>
-        </div>
-    </div>
-    <div class="sobre-contenedor">
-        <div class="sobre">
-            <img src="img/portada/postal2.png" alt="Postal Barcelona 92'">
-        </div>
-    </div>
-</div>
+          <div class="sello">
+              <!--<img src="img/portada/segell-portada.png" alt="Postal Barcelona 92'">-->
+              <a href="index.html" class="button">Entrar</a>
+          </div>
+      </div>
+      <div class="sobre-contenedor">
+          <div class="sobre">
+              <img src="img/portada/postal2.png" alt="Postal Barcelona 92'">
+          </div>
+      </div>
+  </div>
 
-<script src="js/jquery-2.1.1.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-<script>
-    $( ".sobre" ).animate({
-        right: 0,
-    }, 2400);
-
-    $( ".sello" ).animate({
-        marginTop: 0,
-    }, 800);
-
-    $( "a.button" ).animate({
-        opacity: 1,
-    }, 2100);
-
-
-    /*
-  function colaEfectos(){
-  capa = $("#micapa");
-  capa.slideUp(1000);
-  capa.delay(2000)
-  capa.slideDown(1000);
-
-  capa.fadeTo(1500, 0.3).delay(3000).fadeTo(500, 1);
-
-  capa.delay(500);
-  capa.animate({
-    "font-size": "+=0.5em"
-  }, 1000, colaEfectos);
-  //alert (capa.queue().length)
-  }
-
-  $(document).ready(function(){
-  colaEfectos();
-  });
-  */
-</script>
 </body>
 </html>
