--- a/index_final.html
+++ b/index_final.html
@@ -80,7 +80,7 @@
 <!-- Full Screen Button -->
 <div class="icon">
 	<span>Pantalla Completa</span>
-	<a class="fullscreen" href="#!"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+	<a class="fullscreen" href="javascript:void(null)"><svg class="fs-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 
     <!-- Top Right -->
     <path class="tr arrow" d="M74.6 33.6l0-4.3L63.2 40.7c-1.1 1.1-2.8 1.1-3.8 0c-1.1-1.1-1.1-2.8 0-3.9l11.4-11.4h-4.3 c-1.5 0-2.7-1.2-2.7-2.7c0-1.5 1.2-2.7 2.7-2.7h10.9c1.5 0 2.7 1.2 2.7 2.7v10.9c0 1.5-1.2 2.7-2.7 2.7 C75.8 36.3 74.6 35.1 74.6 33.6z"/>
@@ -115,7 +115,7 @@
 <div id="fullpage">
 
 	<!-- SECCION 1 -->
-	<section id="firstsection" data-menuanchor="firstsection" class="section first fondo1">
+	<section id="firstsection" data-menuanchor="firstsection" class="anchorOnVerticalNavigation section first fondo1">
 
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
@@ -192,7 +192,7 @@
 
 	<!-- SECCION 2-->
 
-	<section id="presentacio" class="section second fondo2">
+	<section id="presentacio" class="anchorOnVerticalNavigation section second fondo2">
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -382,7 +382,7 @@
 	</section>
 
 	<!-- SECCION 6 -->
-	<section id="epreolimpiques" class="section six fondo5">
+	<section id="epreolimpiques" class="anchorOnVerticalNavigation section six fondo5">
 
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
@@ -676,7 +676,7 @@
 
 
 	<!-- SECCION 20 -->
-	<section id="eolimpiques" class="section seven fondo6">
+	<section id="eolimpiques" class="anchorOnVerticalNavigation section seven fondo6">
 
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
@@ -780,7 +780,7 @@
 
 
 	<!-- SECCION 23 -->
-	<section id="arreudelmon" class="section eight fondo7 ">
+	<section id="arreudelmon" class="anchorOnVerticalNavigation section eight fondo7 ">
 
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
@@ -827,7 +827,7 @@
 	</section>
 
 	<!-- SECCION 23 -->
-	<section id="emprempta" class="section nine fondo8">
+	<section id="emprempta" class="anchorOnVerticalNavigation section nine fondo8">
 
 		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
 			<div class="diapo_container">
