Maquetación movil finalizada. Se hace en archivo "responsive.css". Añado nuevo fondo en sección 20 para móvil.

--- a/index_final.html
+++ b/index_final.html
@@ -434,15 +434,15 @@
 							<div class="col-xs-12 col-sm-12 col-md-12 flex-child">
 								<div class="col-xs-12 col-sm-6">
 									<h1 class="pb10">Emissió preolímpica #1</h1>
-									<p class="text-left pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+									<p class="text-left pt20 sinbr">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br> Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
 								</div>
 
 								<div class="col-xs-12 col-sm-6">
-									<img class="rota2mov max-img sello1 step step_orderToAnimate-3 no-animated" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_1_mov max-img sello1 step step_orderToAnimate-3 no-animated" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="rota2mov max-img sello2 no-animated" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_2_mov max-img sello2 no-animated" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="rota2mov max-img sello3 no-animated" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_1_mov max-img sello3 no-animated" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
 								</div>
 							</div>
 
@@ -473,8 +473,8 @@
 									<img class="visible-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
 									<img class="visible-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="absolute-center max-img imgmw320 rotam3 sello3 no-animated" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
-									<img class="max-img imgmw320 rota3 sello4 no-animated" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="visible-xs absolute-center max-img imgmw320 rotam3 sello3 no-animated" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="visible-xs max-img imgmw320 rota3 sello4 no-animated" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
 								</div>
 							</div>
 						</div>
@@ -585,15 +585,15 @@
 							</div>
 
 							<div>
-								<img class="absolute-center-right3 max-img imgmw320 rota3 sello1 step step_orderToAnimate-11 no-animated" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="absolute-center-right3 max-img imgmw320 rota3 sello1 step step_orderToAnimate-11 no-animated" src="img/cinco/6/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
 							<div>
-								<img class="absolute-center-right2 max-img imgmw320 rota3 sello2" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+								<img class="absolute-center-right2 max-img imgmw320 rota3 sello2" src="img/cinco/6/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 							</div>
 
 							<div>
-								<img class="absolute-center-right1 max-img imgmw320 rotam3 sello3" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+								<img class="absolute-center-right1 max-img imgmw320 rotam3 sello3" src="img/cinco/6/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							</div>
 
 
@@ -699,7 +699,7 @@
 							</div>
 						</div>
 
-						<div>
+						<div class="pmrelative">
 							<img class="absolute-center-right5 max-img imgmw320 element4 no-animated" src="img/seis/1/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 						</div>
 					</div>
