Añado animación sello4 en maquetación y animación. Así como situar los sellos en las coordenadas correctas.

--- a/index_final.html
+++ b/index_final.html
@@ -848,11 +848,15 @@
 							</div>
 
 							<div>
-								<img class="previs-bottom-center max-img imgmw320 sello2" src="img/seis/2/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+								<img class="previs-bottom-left2 max-img imgmw320 sello2" src="img/ocho/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 							</div>
 
 							<div>
-								<img class="absolute-center-right4 max-img imgmw320 sello3" src="img/seis/2/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="previs-top-right5 max-img imgmw320 sello3" src="img/ocho/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+							<div>
+								<img class="absolute-bottom-1 max-img imgmw320 sello4 no-animated" src="img/ocho/sello4.png" alt="Sello Olímpico Robert Llimós i Oriol 3'" style="">
 							</div>
 
 						</div>
