Se eliminan las imagenes en ALTA. Se añade portada css. Y portada.js

--- a/portada.html
+++ b/portada.html
@@ -8,19 +8,15 @@
     <link rel="author" href=""/>
     <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.6/jquery.fullPage.min.css" media="all">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" media="all">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style_final.css">
-
+    <link rel="stylesheet" href="css/style_portada.css">
 </head>
 
 </head>
-<body id="portada" style="height: 100%;">
+<body id="portada">
   <div class="visible-xs sello_mobile position-relative">
     <a href="index.html">
         <img src="img/portada/sobre_mobile.png">
@@ -39,6 +35,6 @@
           </div>
       </div>
   </div>
-
+  <script src="js/portada.js"></script>
 </body>
 </html>
