Solucionado subir al TOP.

--- a/index_final.html
+++ b/index_final.html
@@ -38,27 +38,8 @@
 	<div class="lines line-bottom"></div>
 </div>
 
-<!--<div id="menuToggle" class="visible-xs">
-
-	<input type="checkbox">
-
-	<div class="hamburguesa">
-		<span></span>
-		<span></span>
-		<span></span>
-	</div>
-
-	<ul id="menu">
-	      <a href="#"><li>Home</li></a>
-	      <a href="#"><li>About</li></a>
-	      <a href="#"><li>Info</li></a>
-	      <a href="#"><li>Contact</li></a>
-	      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
-	</ul>
-</div> -->
-
 <div class="scrolltotop">
-	<a href="#firstsection"><img src="img/scrolltop.png" alt="Subir a Inicio"></a>
+	<a href="#1"><img src="img/scrolltop.png" alt="Subir a Inicio"></a>
 </div>
 
 <!-- Compartir botón -->
