feat(portada): animations

--- a/portada.html
+++ b/portada.html
@@ -24,17 +24,22 @@
   </div>
   <div class="hidden-xs main">
     <div class="sello-contenedor">
-          <div class="sello">
+          <div class="sello no-animated">
               <!--<img src="img/portada/segell-portada.png" alt="Postal Barcelona 92'">-->
-              <a href="index.html" class="button">Entrar</a>
+              <a href="index.html" class="button no-animated">Entrar</a>
           </div>
       </div>
       <div class="sobre-contenedor">
-          <div class="sobre">
+          <div class="sobre no-animated">
               <img src="img/portada/postal2.png" alt="Postal Barcelona 92'">
           </div>
       </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/portada.js"></script>
+
 </body>
 </html>
