--- a/index_final.html
+++ b/index_final.html
@@ -97,7 +97,7 @@
 
 	<!-- SECCION 1 -->
 	<section id="firstsection" data-menuanchor="firstsection" class="anchorOnVerticalNavigation section first fondo1">
-
+		<span class="tooltip_title">Introducció</span>
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -174,6 +174,7 @@
 	<!-- SECCION 2-->
 
 	<section id="presentacio" class="anchorOnVerticalNavigation section second fondo2">
+		<span class="tooltip_title">Presentació</span>
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -364,7 +365,7 @@
 
 	<!-- SECCION 6 -->
 	<section id="epreolimpiques" class="anchorOnVerticalNavigation section six fondo5">
-
+		<span class="tooltip_title">Emisions Preolímpiques</span>
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -658,7 +659,7 @@
 
 	<!-- SECCION 20 -->
 	<section id="eolimpiques" class="anchorOnVerticalNavigation section seven fondo6">
-
+		<span class="tooltip_title">Emisions Olímpiques</span>
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -762,7 +763,7 @@
 
 	<!-- SECCION 23 -->
 	<section id="arreudelmon" class="anchorOnVerticalNavigation section eight fondo7 ">
-
+		<span class="tooltip_title">Arreu del món</span>
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -809,7 +810,7 @@
 
 	<!-- SECCION 23 -->
 	<section id="emprempta" class="anchorOnVerticalNavigation section nine fondo8">
-
+		<span class="tooltip_title">L'emprempta</span>
 		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
