Añadir nueva diapo en la sección 2. Corregir errores de contenido. Corregir tamaños de imágenes y sellos que no aparecian.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<nav id="menu" class="menu">
 		<ul>
 			<li class="introduccio"><a href="#firstsection">Introducció</a></li>
-			<li class="presentacio"><a href="#presentacio">Presentació</a></li>
+			<li class="presentacio"><a href="#presentacio">Barcelona ‘92</a></li>
 			<li class="epreolimpiques"><a href="#epreolimpiques">Emisions Preolímpiques</a></li>
 			<li class="eolimpiques"><a href="#eolimpiques">Emisions Olímpiques</a></li>
 			<li class="arreudelmon"><a href="#arreudelmon">Arreu del món</a></li>
@@ -174,7 +174,7 @@
 	<!-- SECCION 2-->
 
 	<section id="presentacio" class="anchorOnVerticalNavigation section second fondo2">
-		<span class="tooltip_title">Presentació</span>
+		<span class="tooltip_title">Barcelona 92'</span>
 		<div class="diapo diapo_1">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -194,13 +194,13 @@
 						<div class="img-esquina-r-t no-animated">
 							<img src="img/dos/plaza-catalunya1.png" alt="">
 							<div class="minidesc no-animated">
-								<p>Vista aèria de les obres de reconstrucció  de l’Estadi Olímpic de Montjuïc.</p>
+								<p>Escena d’eufòria col·lectiva durant el nombrament de Barcelona  com la seu organitzadora dels Jocs Olímpics de 1992.</p>
 							</div>
 						</div>
 						<div class="img-esquina-l-b no-animated">
 							<img src="img/dos/estadio-olimpico1.png" alt="">
 							<div class="minidesc no-animated">
-								<p>Escena d’eufòria col·lectiva durant el nombrament de Barcelona  com la seu organitzadora dels Jocs Olímpics de 1992.</p>
+								<p>Vista aèria de les obres de reconstrucció  de l’Estadi Olímpic de Montjuïc.</p>
 							</div>
 						</div>
 					</div>
@@ -208,6 +208,7 @@
 			</div>
 		</div>
 
+		
 		<div class="diapo diapo_2 no-animated step step_orderToAnimate-3">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -239,6 +240,43 @@
 				</div>
 			</div>
 		</div>
+		<!-- DANIDEU Esta es la nueva diapo a añadir
+		<div class="diapo diapo_3 no-animated step step_orderToAnimate-4">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<div class="container fullheight">
+						<div class="row fullheight">
+							<div class="col-sm-12 fullheight">
+								<div class="centered contenido">
+									<div class="col-sm-6">
+										<div class="titulodesc">
+											
+											<p>Durant les olimpiades els serveis bàsics  de comunicacions van reforçar-se amb…</p>
+
+											<p>
+											- La instal·lació de set noves oficines de correus a Barcelona i a les subseus olímpiques de Badalona, Banyoles i La Seu d'Urgell.<br>
+
+											- Habilitació de tres estafetes de correus mòbils.<br>
+
+											- Mobilització de gairebé 750 treballadors del servei postals.<br>
+
+											- Instal·lació de 50 noves bústies a les vil·les    i les subseus olímpiques. 
+											</p>
+										</div>
+									</div>
+									<div class="col-sm-6">&nbsp;</div>
+									
+									<img class="buzon2" src="img/dos/buzon.png" alt="Buzón Correos">
+									<img class="sobre2" src="img/dos/sobre.png" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>-->
 	</section>
 
 	<!-- SECCION 3 -->
@@ -286,7 +324,7 @@
 						<div class="row position-relative">
 							<div class="col-sm-12 col-xs-12">
 								<div class="titulodesc">
-									<h1 class="text-center">Les Olimpíades Culturals</h1>
+									<h1 class="text-center">Olimpíada Cultural</h1>
 								</div>
 							</div>
 
@@ -352,7 +390,7 @@
 
 							<div class="col-sm-12">
 								<div class="contenido">
-									<p class="text-center">Dins del programa d'actes, <strong>la comissió presentà dos segells amb una tirada  de 2,500,000 d'exemplars cadascun</strong> i una medalla commemorativa, gràcies a la col·laboració de Correus i la Fábrica Nacional de Moneda y Timbre (FNMT).</p>
+									<p class="text-center">Dins del programa d'actes, <strong>la comissió presentà dos segells amb una tirada  de 2.500.000 d'exemplars cadascun</strong> i una medalla commemorativa, gràcies a la col·laboració de Correus i la Fábrica Nacional de Moneda y Timbre (FNMT).</p>
 								</div>
 							</div>
 						</div>
@@ -450,13 +488,13 @@
 								</div>
 
 								<h1 class="pb10">Emissió preolímpica #2</h1>
-								<p class="text-center pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+								<p class="text-center pt20">Dissenyador: <strong>Rafael Bartolozzi (Pamplona, 1943 - Tarragona, 2009)</strong><br>Esports representats: Hàndbol, Boxa, Ciclisme i Hípica.</p>
 								<div>
 									<img class="visible-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
 									<img class="visible-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="visible-xs absolute-center max-img imgmw320 rotam3 sello3 no-animated" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
-									<img class="visible-xs max-img imgmw320 rota3 sello4 no-animated" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="block absolute-center max-img imgmw320 rotam3 sello3 no-animated" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="block max-img imgmw320 rota3 sello4 no-animated" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
 								</div>
 							</div>
 						</div>
@@ -527,7 +565,7 @@
 							<div class="col-sm-12 flex-child">
 								<div>
 									<h1 class="text-center pb10">Emissió preolímpica #5</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Gerard Sala i Roselló.</strong><br>(Tona, Osona, 1942). Esports representats: Lluita, Natació i Beisbol.</p>
 								</div>
 							</div>
 
