Añadir Créditos + Texto por encima de los sellos

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- DANIDEU Esta es la nueva diapo a añadir
+		<!-- DANIDEU Esta es la nueva diapo a añadir -->
 		<div class="diapo diapo_3 no-animated step step_orderToAnimate-4">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -511,7 +511,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
+							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-right pt40 pb10">Emissió preolímpica #3</h1>
 									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
@@ -536,7 +536,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
+							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #4</h1>
 									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
@@ -597,7 +597,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row flex-parent">
-							<div class="col-sm-6 flex-child">
+							<div class="col-sm-6 flex-child z999">
 								<div>
 									<h1 class="text-left pb10">Emissió preolímpica #6</h1>
 									<p class="text-left pt20">Dissenyador: <strong>Perico Pastor.</strong><br>(La Seu d'Urgell, 1953). Esports representats: Pentatló, Piragüisme i Rem.</p>
@@ -631,7 +631,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
+							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
 									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
@@ -666,7 +666,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12">
+							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #8</h1>
 									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
@@ -735,7 +735,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-8 col-sm-offset-2">
+							<div class="col-sm-8 col-sm-offset-2 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
 									<p class="text-center pt20">El disseny dels tres primers segells identificà els tres <strong>elements clau dels Jocs: Cobi</strong> -disseny de Xavier Mariscal-, <strong>la torxa olímpica</strong> -disseny  d'Agustí Puig- i <strong>"Victòria"</strong> -disseny de Norberto Thomas-.</p>
@@ -769,7 +769,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-8 col-sm-offset-2">
+							<div class="col-sm-8 col-sm-offset-2 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Sèrie olímpica de Barcelona '92</h1>
 									<p class="text-center pt20">Dissenyadors: <strong>Pilar Villuendas, Josep R. Gómez</strong>. Espais representats: Estadi Olímpic, Palau Sant Jordi i INEFC.</p>
@@ -809,7 +809,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-8 col-sm-offset-2">
+							<div class="col-sm-8 col-sm-offset-2 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Barcelona ’92 arreu del món</h1>
 									<p class="text-center pt20">Molts països del món <strong>van posar en circulació els seus segells</strong> olímpics...</p>
@@ -856,7 +856,7 @@
 					<!-- Contenido -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-8 col-sm-offset-2 title">
+							<div class="col-sm-8 col-sm-offset-2 title z999">
 								<div>
 									<h1 class="text-center pb10">L’emprempta</h1>
 									<p class="text-center pt20">Els segells emesos durant els Jocs Olímpics de Barcelona <strong>van posar  el seu gra de sorra en la projecció mundial d'una ciutat moderna i actual.</strong>  La majoria de les il·lustracions,en bona part encarregades a artistes  i dissenyadors gràfics catalans, aposten per <strong>dissenys frescos i innovadors,  un fet poc habitual en la filatèlia del moment.</strong> </p>
@@ -884,6 +884,38 @@
 
 				</div>
 			</div>
+
+			<div class="creditos">
+			
+				<div class="column">
+					<h3>Producció:</h3>
+				    <ul>
+				    	<li>Col·lecció filatèlica Ramon Marull</li>
+				    	<li>Direcció de Memòria, Història i Patrimoni</li>
+				    	<li>Institut de Cultura de Barcelona</li>
+				    	<li>Ajuntament de Barcelona</li>
+				    </ul>
+				</div>
+			    <div class="column">
+				    <h3>Material d'arxiu i gráfica:</h3>
+				    <ul>
+				    	<li>Arxiu Fotogràfic de Barcelona</li>
+				    	<li>Arxiu Històric de la Ciutat</li>
+				    	<li>Col·lecció filatèlica Ramon Marull</li>
+				    	<li>Col·lecció particular</li>
+				    </ul>
+				</div>
+			    <div class="column">
+				    <h3>Agraiments:</h3>
+				    <ul>
+				    	<li>Alberto Aragón-Pérez,</li>
+				    	<li>Antonio Aguilar,</li>
+				    	<li>Dídac Catalan,</li>
+				    	<li>Joan F. Molina,</li>
+				    	<li>Santi Barjau.</li>
+				    </ul>
+				</div>
+		    </div>
 		</div>
 	</section>
 
