feat(section-2): add diapo

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 									</div>
 									<div class="col-sm-6">&nbsp;</div>
 									
-									<img class="buzon2" src="img/dos/buzon.png" alt="Buzón Correos">
-									<img class="sobre2" src="img/dos/sobre.png" alt="">
+									<img class="buzon2 no-animated" src="img/dos/buzon.png" alt="Buzón Correos">
+									<img class="sobre2 no-animated" src="img/dos/sobre.png" alt="">
 								</div>
 							</div>
 						</div>
