Resolver fallos en responsive Añadir créditos correctamente.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- DANIDEU Esta es la nueva diapo a añadir -->
+		
 		<div class="diapo diapo_3 no-animated step step_orderToAnimate-4">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -249,7 +249,7 @@
 						<div class="row fullheight">
 							<div class="col-sm-12 fullheight">
 								<div class="centered contenido">
-									<div class="col-sm-6">
+									<div class="col-sm-6 pt160">
 										<div class="titulodesc">
 											
 											<p>Durant les olimpiades els serveis bàsics  de comunicacions van reforçar-se amb…</p>
