Centrado del sello de la sección SIX con flexbox

--- a/index.html
+++ b/index.html
@@ -424,16 +424,16 @@
 
 
 					<div class="col-sm-12 part2 no-animated">
-						<div class="contenido">
+						<div class="contenido flex-parent">
 							<div class="col-sm-1">&nbsp;</div>
 
 							<div class="col-sm-5">
 								<img class="max-img sello" src="img/cinco/sello.png" alt="Sello Pre Olímpico Barcelona 92'">
 							</div>
 
-							<div class="col-sm-5">
-								<p class="text-left"><strong>L'emblema va ser dissenyat per Josep M. Trias</strong>, i representa una figura saltant sobre els arcs olímpics.</p>
-								<p class="text-left pt20">El disseny sintetitza la figura humana sense concretar el gènere, <strong>transmetent el sentit humà dels Jocs</strong>. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
+							<div class="col-sm-5 flex-child">
+								<p class="text-left"><strong>L'emblema va ser dissenyat per Josep M. Trias</strong>, i representa una figura saltant sobre els arcs olímpics.<br>
+								El disseny sintetitza la figura humana sense concretar el gènere, <strong>transmetent el sentit humà dels Jocs</strong>. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
 							</div>
 							<div class="col-sm-1">&nbsp;</div>
 						</div>
